# Social-Pulse

./: .env.example  .gitignore  AGENTS.md  README.md  conftest.py  list_models.py  pyproject.toml  requirements.txt  social_pulse.db  spec.md
api/: README.md  cache.py  config.py  database.py  dependencies.py  main.py
api/models/: responses.py
api/routes/: campaigns.py  mentions.py  stats.py
src/: main.py
src/aggregators/: statistics.py  stats_aggregator.py  themes.py  trends.py
src/analyzers/: check_models.py  llm_analyzer.py  models.py  prompts.py  sentiment.py
src/collectors/: base.py  google_search.py
src/ui/backend/: api.py
src/ui/frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
src/ui/frontend/components/: ActionPanel.tsx  CampaignModal.tsx  HotTopics.tsx  SentimentOverview.tsx
src/ui/frontend/services/: campaignsService.ts  geminiService.ts  mentionsService.ts
src/ui/frontend/src/: App.jsx
src/utils/: config.py  logger.py
tests/: test_aggregator.py  test_aggregators.py  test_analyzer.py  test_analyzers.py  test_api.py  test_api_db_cache.py  test_api_endpoints.py  test_cache.py  test_collector.py  test_collectors.py  test_database.py  test_integration_e2e.py  test_models.py  test_verification_llm.py
