[tool.poetry]
name = "social-pulse"
version = "0.1.0"
description = "Social sentiment analysis tool"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.0"
pydantic = "^2.0.0"
anthropic = "^0.7.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
